# ai-detection

./: .gitignore  README.md  app.py  pyproject.toml
model/: bert.ipynb
model/.ipynb_checkpoints/: bert-checkpoint.ipynb
