[project]
name = "ai-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "clearml>=2.1.3",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=1.5.0,<3",
    "peft",
    "scikit-learn>=1.8.0",
    "streamlit>=1.41.0",
    "transformers>=5.2.0",
]

